Formatting of other (aka non ReactiveX related) files

--- a/libs/reactivex-test/Utils/CallSequence.cs.ejs
+++ b/libs/reactivex-test/Utils/CallSequence.cs.ejs
@@ -102,7 +102,8 @@ for (var N = 0; N < argsCount; ++N) {
 <%
 }
 %>
-  public CallSequence<T> VerifyNoOtherInvocation() {
+  public CallSequence<T> VerifyNoOtherInvocation()
+  {
     Assert.That(mock.Invocations.Count, Is.EqualTo(invocationsCounter),
       "Expecting mock to have exactly {0} invocation(s), but it has only {1}.",
       invocationsCounter, mock.Invocations.Count);
@@ -117,7 +118,7 @@ for (var N = 0; N < argsCount; ++N) {
   private IInvocation GetNextInvocation()
   {
     int invocationIndex = invocationsCounter++;
-    Assert.Less(invocationIndex, mock.Invocations.Count, "Expecting mock to have at least {0} invocation(s), but it has only {1}.", invocationIndex+1, mock.Invocations.Count);
+    Assert.Less(invocationIndex, mock.Invocations.Count, "Expecting mock to have at least {0} invocation(s), but it has only {1}.", invocationIndex + 1, mock.Invocations.Count);
     return mock.Invocations[invocationIndex];
   }
 }
